// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`62 columns: 2 runs + job + pending/superseded ask snapshot 1`] = `
"superagent 16:58 · 跑 3 · 等你 1 · 今日 0/0
──────────────────────────────────────────────────────────────
sinan  IIQE 题目清单报告
  将军·sol6.1  编码 m2/3
  ▕████████████████████████62% 剩~14m██░░░░░░░░░░░░░░░░░░░░░░▏
xiaopan  启动配置烘焙
  军师·astra  评审 r1
  ▕██████████████████░░░░░░31% 剩~40m░░░░░░░░░░░░░░░░░░░░░░░░▏
xiaopan  启动配置烘焙
  将军·sol6.1  编码
  ▕███████████████████░░░░░33% 剩~20m░░░░░░░░░░░░░░░░░░░░░░░░▏
──────────────────────────────────────────────────────────────
? xiaopan 重试已用尽 是=再跑 否=终止 1h02m"
`;

exports[`46 columns: 2 runs + job + pending/superseded ask snapshot 1`] = `
"superagent 16:58 · 跑 3 · 等你 1 · 今日 0/0
──────────────────────────────────────────────
sinan  IIQE 题目清单报告
  将军·sol6.1  编码 m2/3
  ▕████████████████62% 剩~14m░░░░░░░░░░░░░░░░▏
xiaopan  启动配置烘焙
  军师·astra  评审 r1
  ▕█████████████░░░31% 剩~40m░░░░░░░░░░░░░░░░▏
xiaopan  启动配置烘焙
  将军·sol6.1  编码
  ▕██████████████░░33% 剩~20m░░░░░░░░░░░░░░░░▏
──────────────────────────────────────────────
? xiaopan 重试已用尽 是=再跑 否=终止 1h02m"
`;
